<resources>
    <string name="app_name">Selvawa</string>
    <string name="ir_a_la_pagina_principal">Ir a la página principal</string>
    <string name="selvawa">SELVAWA</string>
    <string name="a_jugar">A jugar</string>
    <string name="instrucciones">Instrucciones:</string>
    <string name="instrucciones_contenido">Responde a las preguntas pulsando la respuesta correcta. Si te equivocas, ¡no te preocupes! Solo diviértete y aprende.</string>
    <string name="redes_sociales">Redes Sociales</string>
    <string name="website_icon">Ícono del sitio web de Selvawa.</string>
    <string name="facebook_icon">Ícono del Facebook de Selvawa.</string>
    <string name="instagram_icon">Ícono del Instagram de Selvawa.</string>
    <string name="selvawa_mascot">Imagen de la mascota de Selvawa</string>
    <string name="pregunta">Pregunta:</string>
    <string name="contenido_pregunta">Ejemplo de Contenido de la Pregunta.</string>
    <string name="salir_del_juego">Salir del juego</string>
    <string name="imagen_de_pregunta_de_un_loro">Imagen de pregunta de un loro</string>
    <string name="siguiente_pregunta">Siguiente pregunta</string>
    <string name="ver_video">Ver Video</string>
    <string name="cerrar">Cerrar</string>
    <string name="inicio">Inicio</string>
    <string name="productos">Productos</string>
    <string name="juego">Juego</string>
    <string name="video">Video</string>
    <string name="perfil">Perfil</string>
    <string name="comenzar">Comenzar</string>
    <string name="puntos_0">Puntos: 0</string>
    <string name="bienvenido_a_selvawa">Bienvenido a Selvawa</string>
    <string name="descubre_productos_sostenibles_y_cuida_el_planeta_con_cada_elecci_n">Descubre productos sostenibles y cuida el planeta con cada elección</string>
    <string name="has_terminado_el_juego">¡Has terminado el juego!</string>
    <string name="puntos_obtenidos_0">Puntos obtenidos: 0</string>
    <string name="volver_a_jugar">Volver a jugar</string>
    <string name="puntos_obtenidos">Puntos obtenidos: %1$d</string>
    <string name="amazonia">Amazonía</string>
</resources>