<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_provisional_sky"
    android:fontFamily="@font/open_sans_regular"
    tools:context=".PresentationGame">

    <Button
        android:id="@+id/buttonIrAPaginaPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/secondary_cream_transparent"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/ir_a_la_pagina_principal"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@id/textViewSelvawa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSelvawa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/accasia"
        android:text="@string/selvawa"
        android:textColor="@color/secondary_cream"
        android:textSize="68sp"
        app:layout_constraintBottom_toTopOf="@id/cardViewInstrucciones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonIrAPaginaPrincipal" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewInstrucciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/secondary_cream"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@id/buttonAJugar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSelvawa">

        <LinearLayout
            android:id="@+id/linearLayoutInstrucciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textViewInstrucciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/instrucciones"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewInstruccionesContenido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:lineSpacingExtra="4dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/instrucciones_contenido"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageViewBearPeeking"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginTop="-40dp"
        android:contentDescription="@string/selvawa_mascot"
        android:src="@drawable/img_bear_peeking"
        app:layout_constraintBottom_toTopOf="@id/cardViewInstrucciones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cardViewInstrucciones" />

    <Button
        android:id="@+id/buttonAJugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="80dp"
        android:backgroundTint="@null"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/a_jugar"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/secondary_cream_transparent"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@id/textViewRedesSociales"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewInstrucciones" />

    <TextView
        android:id="@+id/textViewRedesSociales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/redes_sociales"
        android:textColor="@color/secondary_cream"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/linearLayoutRedesSociales"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonAJugar" />

    <LinearLayout
        android:id="@+id/linearLayoutRedesSociales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewRedesSociales">

        <ImageView
            android:id="@+id/imageViewInstagram"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/facebook_icon"
            android:src="@drawable/ic_facebook"
            app:tint="@color/secondary_cream" />

        <ImageView
            android:id="@+id/imageViewFacebook"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/instagram_icon"
            android:src="@drawable/ic_instagram"
            app:tint="@color/secondary_cream" />

        <ImageView
            android:id="@+id/imageViewWebsite"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/website_icon"
            android:src="@drawable/ic_website"
            app:tint="@color/secondary_cream" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>