<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fontFamily="@font/open_sans_regular"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonIrAPaginaPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/primary"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/ir_a_la_pagina_principal"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:backgroundTint="@color/primary"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
<!--        app:strokeColor="@color/black"-->
<!--        app:strokeWidth="2dp" />-->

    <TextView
        android:id="@+id/textViewSelvawa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/accasia"
        android:text="@string/selvawa"
        android:textColor="@color/text_Selvawa"
        android:textSize="64sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonIrAPaginaPrincipal" />

    <Button
        android:id="@+id/buttonAJugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@null"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/a_jugar"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:backgroundTint="@color/primary"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSelvawa"
<!--        app:strokeColor="@color/black"-->
<!--        app:strokeWidth="2dp" />-->


</androidx.constraintlayout.widget.ConstraintLayout>